style: fix keypad alignment

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -24,11 +24,11 @@
   width: 100%;
   justify-content: center;
 }
-
 .key {
   margin: 2.5px;
   width: auto;
   min-width: 40px;
+  max-width: 65px;
   height: 40px;
   padding: 0 5px;
   background-color: grey;
